--- a/menuexplorerapp/assets/css/style.css
+++ b/menuexplorerapp/assets/css/style.css
@@ -26,3 +26,28 @@ div.selected-line-photos img {
 .originaltext {
     cursor: pointer;
 }
+
+.loader {
+    z-index:100;
+    position: absolute;
+     left: 30%;
+     top: 30%;
+     border: 16px solid #f3f3f3;
+     border-radius: 50%;
+     border-top: 16px solid #3498db;
+     width: 400px;
+     height: 400px;
+     -webkit-animation: spin 2s linear infinite; /* Safari */
+     animation: spin 2s linear infinite;
+   }
+   
+   /* Safari */
+   @-webkit-keyframes spin {
+     0% { -webkit-transform: rotate(0deg); }
+     100% { -webkit-transform: rotate(360deg); }
+   }
+   
+   @keyframes spin {
+     0% { transform: rotate(0deg); }
+     100% { transform: rotate(360deg); }
+   }
